force-app/main/default/objects/GPL_Location__c/GPL_Location__c.object-meta.xml
<CustomObject>
    <label>GPL Location</label>
    <nameField>
        <displayFormat>GPL_L-{0000}</displayFormat>
        <label>GPL Location ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GPL Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>