force-app/main/default/objects/GPL_Location__c/fields/Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Area_Code__c</fullName>
    <label>Area Code</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>