force-app/main/default/objects/GPL_Location__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>City</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>