force-app/main/default/objects/GPL_Location__c/fields/GPL_Location_18_Digit_Id__c.field-meta.xml
<CustomField>
    <fullName>GPL_Location_18_Digit_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GPL Location 18 Digit Id</label>
    <type>Text</type>
</CustomField>