force-app/main/default/objects/GPL_Location__c/fields/GPL_Profile__c.field-meta.xml
<CustomField>
    <fullName>GPL_Profile__c</fullName>
    <label>GPL Profile</label>
    <referenceTo>GPL_Profile__c</referenceTo>
    <relationshipLabel>GPL Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>