force-app/main/default/objects/GPL_Location__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Practice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>