force-app/main/default/objects/GPL_Location__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <label>Longitude</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>