force-app/main/default/objects/GPL_Location__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Postal Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>