force-app/main/default/objects/GPL_Location__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chaplaincy Services</fullName>
            </value>
            <value>
                <fullName>Pickup Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>