force-app/main/default/objects/GPL_Location__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Street</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>