force-app/main/default/objects/GPL_Location__c/validationRules/AUPhoneValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>AUPhoneValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Country__c,&apos;AU&apos;),  OR( LEN(Phone__c) &lt;&gt;8,ISBLANK(Phone__c)))</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Please enter only the 8 digit phone number with no spaces or (brackets).</errorMessage>
</ValidationRule>