force-app/main/default/objects/GPL_Location__c/validationRules/CountrySelected.validationRule-meta.xml
<ValidationRule>
    <fullName>CountrySelected</fullName>
    <active>true</active>
    <description>Ensure a country is selected from the Country picklist</description>
    <errorConditionFormula>ISPICKVAL(Country__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Country__c</errorDisplayField>
    <errorMessage>A country must be specified.</errorMessage>
</ValidationRule>