force-app/main/default/objects/GPL_Location__c/validationRules/FaxValidOrBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>FaxValidOrBlank</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( OR (ISBLANK(Fax__c),OR(REGEX(Fax__c, &quot;\\D*?(\\d\\D*?){10}&quot;),REGEX(Fax__c,&quot;^\\+(?:[0-9] ?){6,14}[0-9]$&quot;))))</errorConditionFormula>
    <errorDisplayField>Fax__c</errorDisplayField>
    <errorMessage>Fax number must be a valid US or International phone number. (###)###-#### or +## ##### #####</errorMessage>
</ValidationRule>