force-app/main/default/objects/GPL_Location__c/validationRules/PhoneValidOrBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneValidOrBlank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Country__c,&quot;AU&quot;)),if(ISPICKVAL(Country__c,&quot;US&quot;),NOT(OR(ISBLANK(Phone__c),OR(REGEX(Phone__c, &quot;\\D*?(\\d\\D*?){10}&quot;),REGEX(Phone__c,&quot;^\\+(?:[0-9] ?){6,14}[0-9]$&quot;)))),if(ISPICKVAL(Country__c,&quot;AU&quot;),
NOT( OR (ISBLANK(Phone__c),OR(REGEX(Phone__c,&quot;\\D*?(\\d\\D*?){10}&quot;),REGEX(Phone__c,&quot;^(0(2|3|4|7|8))?\\d{8}$&quot;)))),null)))</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Phone number must be a valid US or International phone number. (###)###-#### or +## ##### #####</errorMessage>
</ValidationRule>