force-app/main/default/objects/GPL_Location__c/validationRules/StateSelected.validationRule-meta.xml
<ValidationRule>
    <fullName>StateSelected</fullName>
    <active>true</active>
    <description>Ensures that a state is selected from the State picklist</description>
    <errorConditionFormula>ISPICKVAL(State__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>State__c</errorDisplayField>
    <errorMessage>A state must be specified</errorMessage>
</ValidationRule>